--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,14 +15,15 @@
                 <a href="/">Home</a>
                 <a href="/dashboard">Dashboard</a>
                 {{#if logged_in}}
-                <a href="/profile">Profile</a>
-                <button>Logout</button>
+                <button><a href="/">Logout</a></button>
                 {{else}}
                 <a href="/login">Login</a>
                 {{/if}}
             </nav>
         </header>
 
+        <h1>The Tech Blog</h1>
+        
         <main>
             {{{ body }}}
         </main>
