--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,5 @@
+<article class="post">
 {{#each posts as |post| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <a href="/post/{{post.id}}">{{post.name}}</a>
-    </h2>
-
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
+  {{> postInfo post}}
 {{/each}}
+</article>
