--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
                 <a href="/">Home</a>
                 <a href="/dashboard">Dashboard</a>
                 {{#if logged_in}}
-                <button><a href="/">Logout</a></button>
+                <button><a href="/" id="logout">Logout</a></button>
                 {{else}}
                 <a href="/login">Login</a>
                 {{/if}}
