--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,12 +1,12 @@
 <div class="text-center">
   <h2>Create New Post</h2>
   <form class="new-post-form" id="new-post-form">
-    <label for="post=title">Title</label>
+    <label for="post-title">Title</label>
     <input name="post-title" type="text" id="post-title"/>
     <label for="content">Content</label>
     <input name="content" id="content"/>
 
-    <button type="submit" class="btn">Create Post</button>
+    <button type="submit" class="btn" id="new-post-form">Create Post</button>
   </form>
 </div>
 
