reworked some code in connection

--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -6,7 +6,7 @@
     <label for="content">Content</label>
     <input name="content" id="content"/>
 
-    <button type="submit" class="btn" id="new-post-form">Create Post</button>
+    <button type="submit" class="btn">Create Post</button>
   </form>
 </div>
 
