--- a/views/partials/postInfo.handlebars
+++ b/views/partials/postInfo.handlebars
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <h4><a href="/post/{{id}}">{{title}}</a></h4>
+        <h4><a href="/post/{{id}}">{{post.name}}</a></h4>
         <p>Post by: {{user.username}} on {{format_date created_at}}</p>
     </div>
         <p>{{content}}</p>
